--- a/src/main/resources/webroot/index.html
+++ b/src/main/resources/webroot/index.html
@@ -18,8 +18,11 @@
 Strips all numbers and punctuation&#13;
 Converts text to lower case&#13;
 Infers from ngram words">
-      <div>Input text in English, French, German, Dutch, Italian, Spanish, or Welsh</div>
-      <input type="text" placeholder="Enter text"></input>
+      <textarea id="example" rows="10" cols="75" placeholder="Enter text to detect language: English, French, German, Dutch, Italian, Spanish, or Welsh"></textarea>
+      <div class="infer">
+        <button id="infer" type="button" title="Infer/predict input text classification&#13;
+          English, French, German, Dutch, Italian, Spanish, or Welsh">Infer/Predict</button>
+      </div>
       <div class="modelAdmin">
         <button id="save" type="button" title="Saves current trained model">Save</button><button id="load" type="button" title="Loads trained model">Load</button><input id="filename" type="test" placeholder="troys-model"/>
       </div>
