--- a/src/main/resources/webroot/index.html
+++ b/src/main/resources/webroot/index.html
@@ -14,22 +14,23 @@
 
   <body>
     <hr>
-    <div class="testColorParent" title="Predicts language from test&#13;
+    <div class="testParent" title="Predicts language from test&#13;
 Strips all numbers and punctuation&#13;
 Converts text to lower case&#13;
 Infers from ngram words">
       <textarea id="example" rows="10" cols="75" placeholder="Enter text to detect language: English, French, German, Dutch, Italian, Spanish, or Welsh"></textarea>
-      <div class="infer">
-        <button id="infer" type="button" title="Infer/predict input text classification&#13;
-          English, French, German, Dutch, Italian, Spanish, or Welsh">Infer/Predict</button>
-      </div>
-      <div class="modelAdmin">
-        <button id="save" type="button" title="Saves current trained model">Save</button><button id="load" type="button" title="Loads trained model">Load</button><input id="filename" type="test" placeholder="troys-model"/>
-      </div>
-      <div class="modelAdmin">
-        <button id="reset" type="button" title="Replaces current model with new untrained model&#13;
-          Clears training & validation datasets">Reset</button>
-      </div>
+      <div id="predictions">0.99 english<br>0.02 french</div>
+    </div>
+    <div class="infer">
+      <button id="infer" type="button" title="Infer/predict input text classification&#13;
+        English, French, German, Dutch, Italian, Spanish, or Welsh">Infer/Predict</button>
+    </div>
+    <div class="modelAdmin">
+      <button id="save" type="button" title="Saves current trained model">Save</button><button id="load" type="button" title="Loads trained model">Load</button><input id="filename" type="test" placeholder="troys-model"/>
+    </div>
+    <div class="modelAdmin">
+      <button id="reset" type="button" title="Replaces current model with new untrained model&#13;
+        Clears training & validation datasets">Reset</button>
     </div>
     <hr>
     <script src="config.js"></script>
