--- a/src/main/resources/webroot/index.html
+++ b/src/main/resources/webroot/index.html
@@ -19,7 +19,7 @@ Strips all numbers and punctuation&#13;
 Converts text to lower case&#13;
 Infers from ngram words">
       <textarea id="example" rows="10" cols="75" placeholder="Enter text to detect language: English, French, German, Dutch, Italian, Spanish, or Welsh"></textarea>
-      <div id="predictions">0.99 english<br>0.02 french</div>
+      <div id="predictions"></div>
     </div>
     <div class="infer">
       <button id="infer" type="button" title="Infer/predict input text classification&#13;
@@ -33,6 +33,7 @@ Infers from ngram words">
         Clears training & validation datasets">Reset</button>
     </div>
     <hr>
+    <div id="probMatrix"></div>
     <script src="config.js"></script>
     <script src="lang.js"></script>
   </body>
